--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/stripe-js": "^1.42.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "firebase": "^9.12.1",
+    "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-pdf": "^5.7.2",
     "react-player": "^2.11.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
